# tofmodel

./: .gitignore  LICENSE  README.md  array_prod_test.py  combine_batches.py  config.yml  example.py  example_forward_model.py  fig_all_runs.py  fig_forward_model_with_without_area.py  fig_representative.py  fig_schematic.py  fig_summary_data.py  fig_training_sampling.py  fig_velocity_from_simulation.py  fre_signal.py  fre_signal_array.py  import_handler_test.py  input_handler.py  job_combine_batches.sh  job_simulate.sh  job_simulation_pipeline.sh  make_schematic.py  ode_testing.py  plot_spatial_term.py  posfunclib.py  pyproject.toml  setup.py  simulate.py  test_fre_signal.py  test_fre_signal_array.py  test_fre_signal_sameTR.py  test_input_func.py  test_new_spatial_pos_func.py  test_posfunclib.py  test_profiler.py  test_scan.json  test_tofmodel.py  test_tofmodel_fourier_spatial.py  test_tofmodel_harmonics.py  (+6 more)
scripts/: job_combine_batches.sh  job_dataset_cleanup_directories.sh  job_dataset_combine_simulated_batches.sh  job_dataset_pipeline.sh  job_dataset_prepare_simulation_inputs.sh  job_dataset_run_simulation.sh  job_dataset_sort_simulation_inputs.sh  job_simulate.sh
test/: area.txt  test_fre_signal_array.py  test_new_spatial_pos_func.py  test_numeric_spatial.py  test_posfunclib.py  test_tofmodel.py  test_tofmodel_fourier_spatial.py  test_triangle_function.py
tof/: __init__.py  fresignal.py  posfunclib.py  test_numeric_spatial.py  tofmodel.py
tofinv/: models.py  sampling.py  simulations.py  utils.py
tofmodel/: cli.py
tofmodel/forward/: fresignal.py  posfunclib.py  (+3 more)
(+13 files in other folders)
