[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tofmodel"
version = "2.0.0"
description = "Model for simulating fMRI inflow signals"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.9.3",
    "numba==0.60.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "scikit_learn==1.6.0",
    "scipy==1.14.1",
    "setuptools==69.5.1",
    "torch==2.5.1"
]